one file per object persistent storage